altered white space beneath sequence buttons and animation bug

--- a/public/custom_css/custom.css
+++ b/public/custom_css/custom.css
@@ -21,3 +21,7 @@
   
 
 }
+
+#space-below-sequence-blocks {
+  height: 20px;
+}
